// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VideoEmbed component > vimeo 1`] = `
<DocumentFragment>
  <div
    class="_video_9b329f _ar-16-9_9b329f"
    data-astro-source-file="/Users/guill3m/Projects/carme-miquel/src/components/video-embed.astro"
    data-astro-source-loc="42:81"
  >
     
    <iframe
      allow="encrypted-media; fullscreen; gyroscope; picture-in-picture"
      data-astro-source-file="/Users/guill3m/Projects/carme-miquel/src/components/video-embed.astro"
      data-astro-source-loc="47:3"
      src="https://player.vimeo.com/video/test-id"
      title="Video: Test title"
    >
      
	
    </iframe>
     
  </div>
</DocumentFragment>
`;

exports[`VideoEmbed component > youtube 1`] = `
<DocumentFragment>
  <div
    class="_video_9b329f _ar-4-3_9b329f"
    data-astro-source-file="/Users/guill3m/Projects/carme-miquel/src/components/video-embed.astro"
    data-astro-source-loc="42:81"
  >
     
    <iframe
      allow="encrypted-media; fullscreen; gyroscope; picture-in-picture"
      data-astro-source-file="/Users/guill3m/Projects/carme-miquel/src/components/video-embed.astro"
      data-astro-source-loc="47:3"
      src="https://www.youtube-nocookie.com/embed/test-id"
      title="Video: Test title"
    >
      
	
    </iframe>
     
  </div>
</DocumentFragment>
`;

exports[`VideoEmbed component > youtube list 1`] = `
<DocumentFragment>
  <div
    class="_video_9b329f _ar-16-9_9b329f"
    data-astro-source-file="/Users/guill3m/Projects/carme-miquel/src/components/video-embed.astro"
    data-astro-source-loc="42:81"
  >
     
    <iframe
      allow="encrypted-media; fullscreen; gyroscope; picture-in-picture"
      data-astro-source-file="/Users/guill3m/Projects/carme-miquel/src/components/video-embed.astro"
      data-astro-source-loc="47:3"
      src="https://www.youtube-nocookie.com/embed/videoseries?list=test-id"
      title="Video: Test title"
    >
      
	
    </iframe>
     
  </div>
</DocumentFragment>
`;
